syntax = "proto3";

package api.palace.common;

option go_package = "github.com/aide-family/moon/pkg/api/palace/common;common";

// GlobalStatus represents the status of a global resource.
enum GlobalStatus {
  // GLOBAL_STATUS_UNKNOWN is the default status for a global resource.
  GLOBAL_STATUS_UNKNOWN = 0;
  // GLOBAL_STATUS_ENABLE indicates the resource is enabled.
  GLOBAL_STATUS_ENABLE = 1;
  // GLOBAL_STATUS_DISABLE indicates the resource is disabled.
  GLOBAL_STATUS_DISABLE = 2;
}

// OperateType represents the type of an operation.
enum OperateType {
  // OPERATE_TYPE_UNKNOWN is the default type when the operation type is unknown.
  OPERATE_TYPE_UNKNOWN = 0;
  // OPERATE_TYPE_QUERY indicates that the operation is a query operation.
  OPERATE_TYPE_QUERY = 1;
  // OPERATE_TYPE_ADD indicates that the operation is an add operation.
  OPERATE_TYPE_ADD = 2;
  // OPERATE_TYPE_UPDATE indicates that the operation is an update operation.
  OPERATE_TYPE_UPDATE = 3;
  // OPERATE_TYPE_DELETE indicates that the operation is a delete operation.
  OPERATE_TYPE_DELETE = 4;
  // OPERATE_TYPE_LOGIN indicates that the operation is a login operation.
  OPERATE_TYPE_LOGIN = 5;
  // OPERATE_TYPE_LOGOUT indicates that the operation is a logout operation.
  OPERATE_TYPE_LOGOUT = 6;
  // OPERATE_TYPE_EXPORT indicates that the operation is an export operation.
  OPERATE_TYPE_EXPORT = 7;
  // OPERATE_TYPE_IMPORT indicates that the operation is an import operation.
  OPERATE_TYPE_IMPORT = 8;
}

// MenuType represents the type of a menu
enum MenuType {
  // Default unknown menu type
  MENU_TYPE_UNKNOWN = 0;
  // System menu type
  MENU_TYPE_SYSTEM = 1;
  // Team menu type
  MENU_TYPE_TEAM = 2;
  // User menu type
  MENU_TYPE_USER = 3;
  // None menu type
  MENU_TYPE_NONE = 4;
}

enum MenuCategory {
  MENU_CATEGORY_UNKNOWN = 0;
  MENU_CATEGORY_MENU = 1;
  MENU_CATEGORY_BUTTON = 2;
}

enum MenuProcessType {
  MENU_PROCESS_TYPE_UNKNOWN = 0;
  MENU_PROCESS_TYPE_LOGIN = 1;
  MENU_PROCESS_TYPE_TEAM = 2;
  MENU_PROCESS_TYPE_LOG = 4;
  MENU_PROCESS_TYPE_DATA_PERMISSION = 8;
  MENU_PROCESS_TYPE_ADMIN = 16;
}

enum DatasourceDriverMetric {
  DATASOURCE_DRIVER_METRIC_UNKNOWN = 0;
  DATASOURCE_DRIVER_METRIC_PROMETHEUS = 1;
  DATASOURCE_DRIVER_METRIC_VICTORIAMETRICS = 2;
}

enum HTTPMethod {
  HTTP_METHOD_UNKNOWN = 0;
  HTTP_METHOD_GET = 1;
  HTTP_METHOD_POST = 2;
  HTTP_METHOD_PUT = 3;
  HTTP_METHOD_DELETE = 4;
  HTTP_METHOD_HEAD = 5;
  HTTP_METHOD_OPTIONS = 6;
  HTTP_METHOD_PATCH = 7;
}

// SampleMode represents the sampling mode
// (e.g., how many times an event occurs within a period)
enum SampleMode {
  // Unknown
  SAMPLE_MODE_UNKNOWN = 0;
  // Occurs n times consecutively within m time
  SAMPLE_MODE_FOR = 1;
  // Occurs at most n times within m time
  SAMPLE_MODE_MAX = 2;
  // Occurs at least n times within m time
  SAMPLE_MODE_MIN = 3;
}

enum ConditionMetric {
  CONDITION_METRIC_UNKNOWN = 0;
  // Equal to
  CONDITION_METRIC_EQ = 1;
  // Not equal to
  CONDITION_METRIC_NE = 2;
  // Greater than
  CONDITION_METRIC_GT = 3;
  // Greater than or equal to
  CONDITION_METRIC_GTE = 4;
  // Less than
  CONDITION_METRIC_LT = 5;
  // Less than or equal to
  CONDITION_METRIC_LTE = 6;
  // In range
  CONDITION_METRIC_IN = 7;
  // Not in range
  CONDITION_METRIC_NOT_IN = 8;
}

enum StrategyType {
  STRATEGY_TYPE_UNKNOWN = 0;
  STRATEGY_TYPE_METRIC = 1;
  STRATEGY_TYPE_EVENT = 2;
  STRATEGY_TYPE_LOGS = 3;
  STRATEGY_TYPE_PORT = 4;
  STRATEGY_TYPE_HTTP = 5;
  STRATEGY_TYPE_PING = 6;
  STRATEGY_TYPE_CERT = 7;
}

enum DictType {
  DICT_TYPE_UNKNOWN = 0;
  DICT_TYPE_ALARM_LEVEL = 1;
  DICT_TYPE_ALARM_PAGE = 2;
}

enum HookAPP {
  HOOK_APP_UNKNOWN = 0;
  HOOK_APP_OTHER = 1;
  HOOK_APP_DING_TALK = 2;
  HOOK_APP_WECHAT = 3;
  HOOK_APP_FEI_SHU = 4;
}

enum NoticeType {
  NOTICE_TYPE_UNKNOWN = 0;
  NOTICE_TYPE_EMAIL = 1;
  NOTICE_TYPE_SMS = 2;
  NOTICE_TYPE_VOICE = 4;
}

enum SMSProviderType {
  SMS_PROVIDER_TYPE_UNKNOWN = 0;
  SMS_PROVIDER_TYPE_ALIYUN = 1;
  SMS_PROVIDER_TYPE_TENCENT = 2;
  SMS_PROVIDER_TYPE_TWILIO = 3;
}

enum MessageType {
  MESSAGE_TYPE_UNKNOWN = 0;
  MESSAGE_TYPE_EMAIL = 1;
  MESSAGE_TYPE_SMS = 2;
  MESSAGE_TYPE_VOICE = 3;
  MESSAGE_TYPE_HOOK_DING_TALK = 4;
  MESSAGE_TYPE_HOOK_WECHAT = 5;
  MESSAGE_TYPE_HOOK_FEI_SHU = 6;
  MESSAGE_TYPE_HOOK_WEBHOOK = 7;
}

enum SendMessageStatus {
  SEND_MESSAGE_STATUS_UNKNOWN = 0;
  SEND_MESSAGE_STATUS_SUCCESS = 1;
  SEND_MESSAGE_STATUS_FAILED = 2;
  SEND_MESSAGE_STATUS_PENDING = 3;
  SEND_MESSAGE_STATUS_SENDING = 4;
  SEND_MESSAGE_STATUS_RETRY = 5;
}

enum TimeEngineRuleType {
  TIME_ENGINE_RULE_TYPE_UNKNOWN = 0;
  TIME_ENGINE_RULE_TYPE_HOUR_RANGE = 1;
  TIME_ENGINE_RULE_TYPE_HOUR = 2;
  TIME_ENGINE_RULE_TYPE_HOUR_MINUTE_RANGE = 3;
  TIME_ENGINE_RULE_TYPE_DAYS_OF_WEEK = 4;
  TIME_ENGINE_RULE_TYPE_DAY_OF_MONTH = 5;
  TIME_ENGINE_RULE_TYPE_MONTH = 6;
}

enum InviteType {
  // UNKNOWN 未知
  INVITE_TYPE_UNKNOWN = 0;
  // 已加入
  INVITE_TYPE_JOINED = 1;
  // 邀请中
  INVITE_TYPE_UNDER_REVIEW = 2;
  // 邀请加入项目
  INVITE_TYPE_REJECTED = 3;
}
