syntax = "proto3";

package api.rabbit.v1;

import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "rabbit/common/common.proto";

option go_package = "github.com/aide-family/moon/pkg/api/rabbit/v1;v1";

service Send {
  rpc Email (SendEmailRequest) returns (rabbit.common.EmptyReply) {
    option (google.api.http) = {
      post: "/v1/send/email"
      body: "*"
    };
  }

  rpc Sms (SendSmsRequest) returns (rabbit.common.EmptyReply) {
    option (google.api.http) = {
      post: "/v1/send/sms"
      body: "*"
    };
  }

  rpc Hook (SendHookRequest) returns (rabbit.common.EmptyReply) {
    option (google.api.http) = {
      post: "/v1/send/hook"
      body: "*"
    };
  }
}

message SendEmailRequest {
  string requestId = 1 [(buf.validate.field).required = true, (buf.validate.field).string = {
    min_len: 32,
    max_len: 36,
  }];
  repeated string emails = 2 [(buf.validate.field).cel = {
    expression: "this.size() >= 1 && this.size() <= 100"
    message: "emails must be between 1 and 100"
  }];
  string body = 3 [(buf.validate.field).required = true];
  string subject = 4 [(buf.validate.field).required = true];
  string contentType = 5;
  string attachment = 6;
  repeated string cc = 7;
  string configName = 8;
}

message SendSmsRequest {
  string requestId = 1 [(buf.validate.field).required = true, (buf.validate.field).string = {
    min_len: 32,
    max_len: 36,
  }];
  repeated string phones = 2 [(buf.validate.field).cel = {
    message: "phones must be between 1 and 100"
    expression: "this.size() >= 1 && this.size() <= 100"
  }];
  string templateParameters = 3 [(buf.validate.field).required = true];
  string templateCode = 4 [(buf.validate.field).required = true];
  string configName = 5;
}

message SendHookRequest {
  string requestId = 1 [(buf.validate.field).required = true, (buf.validate.field).string = {
    min_len: 32,
    max_len: 36,
  }];
  repeated string body = 2 [(buf.validate.field).required = true];
  string configName = 3;
}

